FR - cli post
